--- a/.github/workflows/deploy-proposals.yaml
+++ b/.github/workflows/deploy-proposals.yaml
@@ -33,22 +33,28 @@ jobs:
         run: |
           if [[ -d gr-registry/_web ]]
           then
-            echo "{\"gaMeasurementId\":\"${GA_MEASUREMENT_ID}\"}" > gr-registry/_web/resources/js/ga.json
+            echo "{\"gaMeasurementId\":\"${GA_MEASUREMENT_ID}\"}" > "${DATASET_NAME}"/_web/resources/js/ga.json
+
+            # FIXME: Must specify --datadir *after* --injected-entries, or else
+            # it would complain about `Invalid subcommand for build - use 'watch'`
             npx @paneron/site-builder@0.0.44 \
-              --forusername maccraymer \
-              --outdir dist \
-              --datadir gr-registry \
-              -i gr-registry/_web/ga.js \
-              --injected-assets-dir gr-registry/_web/resources
+              --forusername "${PANERON_USER}" \
+              --outdir "${OUTDIR}" \
+              --injected-entries "${DATASET_NAME}"/_web/ga.js \
+              --injected-assets-dir "${DATASET_NAME}"/_web/resources \
+              --datadir "${DATASET_NAME}"
           else
             echo >&2 "Fallback to older version (0.0.43) of site-builder"
             npx @paneron/site-builder@0.0.43 \
-              --forusername maccraymer \
-              --outdir dist \
-              --datadir gr-registry
+              --forusername "${PANERON_USER}" \
+              --outdir "${OUTDIR}" \
+              --datadir "${DATASET_NAME}"
           fi
         env:
           GA_MEASUREMENT_ID: ${{ vars.GA_MEASUREMENT_ID }}
+          PANERON_USER: maccraymer
+          DATASET_NAME: gr-registry
+          OUTDIR: dist
       - name: Upload Pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
