--- a/.github/workflows/deploy-proposals.yaml
+++ b/.github/workflows/deploy-proposals.yaml
@@ -31,9 +31,21 @@ jobs:
           ref: master
       - name: Build
         run: |
-          if [[ -d gr-registry/_web ]]
+          if [[ -n "${GA_MEASUREMENT_ID:-}" ]]
           then
-            echo "{\"gaMeasurementId\":\"${GA_MEASUREMENT_ID}\"}" > "${DATASET_NAME}"/_web/resources/js/ga.json
+            # Define the directory where the site-builder will look for the GA
+            # measurement ID
+            WEB_RESOURCES_DIR="${DATASET_NAME}"/_web/resources
+
+            # Where to write the Google Analytics measurement ID
+            GA_JSON_PATH="${WEB_RESOURCES_DIR}"/js/ga.json
+
+            # Make sure the directory exists
+            GA_JSON_DIR="${GA_JSON_PATH%/*}"
+            mkdir -p "${GA_JSON_DIR}"
+
+            echo "{\"gaMeasurementId\":\"${GA_MEASUREMENT_ID}\"}" > "${GA_JSON_PATH}"
+            echo >&2 "Requirements met.  Using latest version (0.0.44) of site-builder..."
 
             # FIXME: Must specify --datadir *after* --injected-entries, or else
             # it would complain about `Invalid subcommand for build - use 'watch'`
@@ -41,7 +53,7 @@ jobs:
               --forusername "${PANERON_USER}" \
               --outdir "${OUTDIR}" \
               --injected-entries "${DATASET_NAME}"/_web/ga.js \
-              --injected-assets-dir "${DATASET_NAME}"/_web/resources \
+              --injected-assets-dir "${WEB_RESOURCES_DIR}" \
               --datadir "${DATASET_NAME}"
           else
             echo >&2 "Fallback to older version (0.0.43) of site-builder"
